[package]
name = "chatterbox"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1

[dependencies]
actix-web = "4.11.0"
actix-web-lab = "0.24.2"
cuid2 = "0.1.4"
log = "0.4.27"
parking_lot = "0.12.4"
serde = "1.0.219"
sha2 = "0.10.9"
time = { version = "0.3.41", features = ["local-offset", "serde-well-known"]}
tokio = "1.47.1"

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "tls-native-tls", "postgres", "time"]
